@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 11:24:40 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 11:27:06 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -102,5 +102,11 @@
   <description>Kpop偶像lipsync爭議再起隨著Kpop偶像在全球日益受歡迎歌迷對他們的現場表演也有了更高的期望許多Kpop歌迷現在期待在現場表演中聽到令人印象深刻的歌聲對lipsync的忍耐度也越來越...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 11:24:40 +0800</pubDate>
+</item><item>
+  <title>K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？</title>
+  <link>https://www.famechos.me/news/K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？.html</link>
+  <description>今日KpopTXT將於下月回歸推出第七張迷你專輯TXTTOMORROWXTOGETHER將於11月4日回歸推出第七張迷你專輯TheStarChapterSanctuary這是該團第四個系列的首張專輯繼夢想混亂和名字之後這張迷你專輯距離該團上一張迷你專輯minisode3Tomorrow發行...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 11:27:06 +0800</pubDate>
 </item></channel>
 </rss>
