@@ -1,0 +1,268 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001THE BOYZ\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c\u8ab0\u80fd\u7a31\u9738\u6a02\u58c7\uff1f", "description": "K-pop \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001THE BOYZ\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c\u8ab0\u80fd\u7a31\u9738\u6a02\u58c7\uff1f", "url": "https://www.famechos.me/news/K-pop \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001THE BOYZ\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c\u8ab0\u80fd\u7a31\u9738\u6a02\u58c7\uff1f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T11:26:57.343667+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？.html"/>
+<meta name="description" content="K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？最新專輯消息、回歸日期、音樂風格等詳情盡在此！">
+
+<meta name="keywords" content="K-pop, 四大天團, TXT, aespa, THE BOYZ, Boynextdoor, 新專輯, 回歸, 樂壇, 音樂, 韓流, 流行音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？.html" />
+        <meta property="og:title" content="K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？" />
+        <meta property="og:description" content="K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？" />
+        <meta property="twitter:description" content="K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>TXT（TOMORROW X TOGETHER）將於11月4日回歸，推出第七張迷你專輯《The Star Chapter: Sanctuary》。這是該團第四個系列的首張專輯，繼《夢想》、《混亂》和《名字》之後。</p>
+<p>這張迷你專輯距離該團上一張迷你專輯《minisode 3: Tomorrow》發行已經七個月了。該專輯在發行當天就賣出了超過一百萬張，並在國內音樂榜單上橫掃一切。第六張迷你專輯在告示牌二百大專輯榜上排名第三，並在主專輯榜上停留了三周，六月份重新進入榜單排名第111位。</p>
+<p>與此同時，該團在週末於台北舉行了演唱會，結束了為期數月的國際巡演。該巡演在17個城市舉行了28場演唱會。下月，該團將在首爾和大阪舉行安可演唱會。</p>
+<h2>aespa 將推出專屬演唱會歌曲</h2>
+<p>aespa成員在第二次單獨演唱會上演唱的獨唱歌曲將於週三以數字單曲的形式發行。數字單曲《SYNK : 平行線》將包含四首歌曲：劉知珉的《Up》，吉賽爾的《Dopamine》，寧寧的《Bored!》和金旼炡的《Spark》。</p>
+<p>劉知珉親自寫了她那首具有抓耳旋律的嘻哈舞曲的歌詞，而吉賽爾則參與了那首包含戀愛中人複雜情感的R&B曲子的創作。寧寧和金旼炡也參與了她們各自的獨唱音樂創作。</p>
+<p>該團將於10月21日發行第五張迷你專輯《Whiplash》。她們的第一張完整專輯《末日審判》的主打曲《Supernova》在音樂榜單上仍然保持強勢，曾在Melon音樂榜上停留了20年歷史上最長時間。</p><h2>The Boyz將發行第九張迷你專輯</h2>
+<p>THE BOYZ（韓語：더보이즈）將於10月28日發行第九張迷你專輯《Trigger》。</p>
+<p>該專輯的名稱以中文字符寫在專輯封面圖片上，圖片中還有藍色車燈光線的效果。</p>
+<p>在完成第二張錄音室專輯後僅僅七個月，該團就發行了這張專輯。該專輯分為三部分發行。在發行三部曲後，該團啟動了第三次國際巡演《Zeneration II》，訪問了世界15個城市。該巡演的最終場於9月23日在大阪舉行。</p>
+<h2>首次世界巡演詳情出爐！Boynextdoor正式公布巡演安排</h2>
+<p>根據KOZ娛樂公司的公告，Boynextdoor 將於12月舉行首場單獨演唱會。六位成員將於12月14日至15日在仁川舉行兩場演唱會，並將在線直播。</p>
+<p>接下來，他們將於1月30日在東京開始亞洲巡演，之後將訪問日本的其他五個城市。巡演還將在新加坡、馬尼拉、曼谷、台北、香港和雅加達等地舉行，直至4月中旬。</p>
+<p>這次演唱會的期待度很高，尤其是在上個月發行的第三張迷你專輯《19.99》登上了告示牌二百大專輯榜第40位，創下了該組合的最高紀錄，並在Oricon公信榜的每日、每週和每週綜合專輯排名中均排名第一。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GhYE0ZVT06I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控.html">前ADOR娛樂CEO閔熙珍爆料海譜抄襲NewJeans概念！內部吹哨人出面指控</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？.html">Jennie強勢回歸！BLACKPINK成員宣佈新單曲《Mantra》10月11日發行，能否再登告示牌榜單？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html">K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
