@@ -140,4 +140,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T11:27:06+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
